Kubernates/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: farmconnect
  labels:
    app.kubernetes.io/part-of: farmconnect
